Fix color of code links in dark mode

--- a/assets/css/media-queries/_prefers-color-scheme.scss
+++ b/assets/css/media-queries/_prefers-color-scheme.scss
@@ -64,7 +64,7 @@
     li,
     dd,
     td {
-        &>code {
+        code {
             color: $purple;
         }
     }
